# flink_codex

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CUSTOMER_TEST_RESULTS.md  README.md  USAGE.md  customer_test_results.json  pyproject.toml
.codex/: config.toml
.codex/agents/: flink_job_creator.md
reports/: MCP_PATTERN_TEST_RESULTS.md  PATTERN_SCHEMA_RESULTS.md  mcp_pattern_test_results.json
scripts/: install_codex_mcp.sh  test_mcp_patterns.py
skills/avro-patterns/: SKILL.md
skills/avro-to-avro-simple-filter/: SKILL.md
skills/cross_format_patterns/: SKILL.md
skills/json-to-avro/: SKILL.md
skills/json-to-json-filter-only/: SKILL.md
skills/json-to-json-nested-filter/: SKILL.md
skills/json_patterns/: SKILL.md
skills/nested-avro-to-flat-avro/: SKILL.md
skills/nested-avro-to-nested-avro/: SKILL.md
skills/nested-json-to-avro/: SKILL.md
skills/nested-json-to-flat-json/: SKILL.md
skills/preview_verification/: SKILL.md
skills/schema_resolution/: SKILL.md
skills/validation_guardrails/: SKILL.md
src/flink_codex/: __init__.py  catalog.py  confluent_client.py  interpreter.py  job_service.py  models.py  preview.py  publisher.py  schema_generator.py  server.py  sql_generator.py  validation.py
src/flink_codex/utils/: credential_masking.py
templates/: json_to_avro.sql.j2  json_to_json_nested_filter.sql.j2  preview_table.md.j2
tests/: conftest.py  test_create_flink_job.py  test_credential_masking.py  test_oauth.py  test_pattern_catalog.py  test_preview.py  test_publish.py  test_sql_generation.py  test_validation.py
