[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flink-codex"
version = "0.1.0"
description = "Deterministic Codex + MCP project for Flink clean job creation on Confluent Cloud."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135.3,<1.0",
  "fastmcp>=3.2.3,<4.0",
  "httpx>=0.28.1,<1.0",
  "jinja2>=3.1.6,<4.0",
  "pydantic>=2.12.5,<3.0",
  "fastavro>=1.12.1,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
